--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 
 <style>
 button1 {
-background: #cc8400;
-border-style: hidden; /* Параметры рамки */
-border-radius: 30px;
-width: 145px; /* Ширина кнопки */
-height: 35px; /* Высота */
+width: 143px;
+height: 30px;
+background-color: black;
+background-image: linear-gradient(to top, #0c0c0c 0%, #282828 100%);
+border: 1px solid #0e0e0e;
+box-shadow: 0.5px 0.9px 1px rgba(4, 4, 4, 0.3), inset 0.7px 0.8px 1px rgba(255, 255, 255, 0.43);
 }
 </style>
 <link href="styles.css" rel="stylesheet" type="text/css" />
@@ -42,14 +43,14 @@ height: 35px; /* Высота */
       <td class=img1 colspan=4 ><img src="linebott.png" width="980" height="3" alt=""/></td>
     </tr>
     <tr>
-      <td class=img1 colspan=4><img src="Orange.png" width="874" height="609" alt=""/></td>
+      <td class=img1 colspan=4><img src="Orange.png" width="874" height="365" alt=""/></td>
     </tr>
     <tr>
-      <td  colspan=4 align="left"><button class=button1 border-style:none=""><img src="Visit Website Text.png" width="140" height="32" alt=""/></button></td>
+      <td  colspan=4 align="left"><button class="button1"><img src="Visit Website Text.png" width="88" height="10" alt=""/></button></td>
     </tr>
     <tr>
-       <td colspan=4 valign="middle" style='font-family: Georgia Regular;font-size: 12pt;color: #ffffff;font-style: italic;'><button  button class=button2 border-style:none=""><img src="Left.png" width="22" height="27" alt=""/></button>
-       <button  button class=button2 border-style:none=""><img src="Right.png" width="22" height="27" alt=""/></button> Next Slide (1/3)
+       <td colspan=4 valign="middle" style='font-family: Georgia Regular;font-size: 12pt;color: #ffffff;font-style: italic; padding-top:30px'><button  button class=button3 border-style:none=""><img src="arrow down copy 10.png" width="6" height="10" alt=""/></button>
+       <button  button class=button3 border-style:none=""><img src="arrow down copy 9.png" width="6" height="10" alt=""/></button> Next Slide (1/3)
        </td>
     </tr>
     <tr colspan=4>
@@ -67,10 +68,13 @@ height: 35px; /* Высота */
       <td class="text2">Icon Design</td>
     </tr>
     <tr>
+      <td class="text3">Lorem ipsum dolor sit amet, consectetur<br />
+adipiscing elit. Aenean at sollicitudin sapien.</td>
       <td class="text3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at sollicitudin sapien.</td>
       <td class="text3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at sollicitudin sapien.</td>
-      <td class="text3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at sollicitudin sapien.</td>
-      <td class="text3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at sollicitudin sapien.</td>
+      <td class="text3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at sollicitudin sapien.
+      
+      </td>
     </tr>
     <tr >
       <td class=img1 colspan=4><img src="Layer 25 copy.png" width="980" height="3" alt=""/></td>
@@ -96,16 +100,16 @@ height: 35px; /* Высота */
       <td class="text3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at sollicitudin sapien.</td>
     </tr>
     <tr>
-      <td width="10%" colspan="1" background="Orange copy.png" style='padding-top:150px;'> <img src="Logo.png" width="107" height="49" alt=""/></td>
-      <td colspan="3" background="Orange copy.png" style='padding-top:150px;'><img src="Logo copy.png" width="93" height="49" alt=""/></td>
+      <td width="10%" colspan="1" style='padding-top:150px;'> <img src="Logo.png" width="107" height="49" alt=""/></td>
+      <td colspan="3" style='padding-top:150px;'><img src="Logo copy.png" width="93" height="49" alt=""/></td>
     </tr>
     <tr>
-      <td colspan="1" background="fon.png" class="text3">Suspendisse ullamcorper adipiscing ligula, ut sollicitudin nulla tempus id. Aliquam vitae fermentum purus. Vestibulum sed arcu turpis, in aliquet tortor. Praesent augue sapien, malesuada ut scelerisque vitae, rhoncus in enim. Cras tincidunt tincidunt luctus. Fusce a nulla mauris, et convallis urna. </td>
-      <td colspan="3" background="fon.png" class="text3" valign= top>Suspendisse ullamcorper adipiscing ligula, ut sollicitudin nulla tempus id. Aliquam vitae fermentum Suspendisse ullamcorper adipiscing ligula, ut sollicitudin nulla tempus id. Aliquam vitae fermentum purus.  </td>
+      <td colspan="1" class="text3">Suspendisse ullamcorper adipiscing ligula, ut sollicitudin nulla tempus id. Aliquam vitae fermentum purus. Vestibulum sed arcu turpis, in aliquet tortor. Praesent augue sapien, malesuada ut scelerisque vitae, rhoncus in enim. Cras tincidunt tincidunt luctus. Fusce a nulla mauris, et convallis urna. </td>
+      <td colspan="3" class="text3" valign= top>Suspendisse ullamcorper adipiscing ligula, ut sollicitudin nulla tempus id. Aliquam vitae fermentum Suspendisse ullamcorper adipiscing ligula, ut sollicitudin nulla tempus id. Aliquam vitae fermentum purus.<img src="Folio Thumbs.png" width="325" height="121" alt=""/>  </td>
     </tr>
     <tr>
-      <td colspan="1" background="fon.png" class="text3"> </td>
-      <td colspan="3" background="fon.png" class="text3"><img src="Folio Thumbs.png" width="325" height="121" alt=""/></td>
+      <td colspan="1"  class="text3"> </td>
+      <td colspan="3"  class="text3"></td>
     </tr><tr>
       <td>&nbsp;</td>
     </tr>
